--- a/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_MatchResult.cshtml
@@ -1,5 +1,4 @@
-﻿@using DFC.App.MatchSkills.ViewModels
-@model DFC.App.MatchSkills.Models.CareerMatch
+﻿@model DFC.App.MatchSkills.Models.CareerMatch
 
 <div class="govuk-!-width-full">
     <div class="app-long-results__item">
