occ search start

--- a/DFC.App.MatchSkills/Views/Home/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/Body.cshtml
@@ -19,7 +19,7 @@
                     <govUkListItem text="exploring career options for your future"></govUkListItem>
                     <govUkListItem text="looking to return to work after a break"></govUkListItem>
                 </govukBulletedList>
-                <govukStartButtonLink id="@Model.GetElementId("govukStartButtonLink ","Start")" linkText="Start now" LinkHref="@Model.CompositeSettings.Path/worked"></govukStartButtonLink>
+                <govukStartButtonLink id="@Model.GetElementId("govukStartButtonLink ","Start")" linkText="Start now" LinkHref="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.OccupationSearch"></govukStartButtonLink>
             </div>
 
             <div class="govuk-grid-column-one-third">
