--- a/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
@@ -21,29 +21,26 @@
 <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form id="@formElementName" action="@CompositeViewModel.PageId.OccupationSearch/GetSkillsForOccupation" method="post">
+            <form id="@formElementName" action="@CompositeViewModel.PageId.OccupationSearchDetails" method="post">
                 <div id="@formGroup" class="govuk-form-group   @(Model.HasError ? "govuk-form-group--error" : "")">
-                    <govukHeadingH1 Text="Enter your job title" />
+                    <govukHeadingH1 Text="Enter your current or previous job title" />
 
                     <p>This can be your current job or one that you’ve done before. You can match the skills you used in this job to other careers.</p>
 
                     <p>You can add skills from more than one job to your skills list.</p>
 
+                    <govukLabel for="@Model.GetElementId("govUkInput", "Search")" text="Enter your job title" additional-class="govuk-!-font-weight-bold"></govukLabel>
 
-                    <govukAutoComplete Id="@autoCompleteElementName"
-                                       Element="occupations-autocomplete-container" Source="Suggest" FunctionName="AutoComplete"
-                                       autoselect="false" confirmOnBlur="true" cssNameSpace="autocomplete" 
-                                       minLength="2" name="EnterJobInputAutocomplete">
-                        <govukAutoCompleteError id="@autoCompleteError" text="Enter a job title" hidden="@(!Model.HasError)"></govukAutoCompleteError>
-                        <govukAutocompleteLabel Text="Enter your current or previous job title" additional-class="govuk-!-font-size-19 govuk-!-font-weight-bold" For="@autoCompleteElementName"></govukAutocompleteLabel>
+                    <govukTextInput id="@Model.GetElementId("govUkInput", "Search")">
+                    </govukTextInput>
 
-
-                    </govukAutoComplete>
                 </div>
                 <br />
                 <br />
                 <govukSecondaryButton id="@searchButton" text="Search"></govukSecondaryButton>
             </form>
+            <p>To search for a specific skill, please click the link bellow</p>
+            <p><a class="govuk-link" href="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.EnterSkills">Search via skills</a></p>
         </div>
         <div class="govuk-grid-column-one-third">
             <govukHeadingH3 text="Occupations you've recently added"></govukHeadingH3>
