- Fix search textbox - Ensure occupations are added in

--- a/DFC.App.MatchSkills/Views/OccupationSearchDetails/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearchDetails/Body.cshtml
@@ -21,7 +21,7 @@
                     <p>Search for different occupation</p>
                     <govukLabel for="@Model.GetElementId("govUkInput", "Search")" text="Enter your job title" additional-class="govuk-!-font-weight-bold"></govukLabel>
 
-                    <govukTextInput id="@Model.GetElementId("govUkInput", "Search")">
+                    <govukTextInput id="occupationSearchGovUkInputSearch">
                     </govukTextInput>
 
                 </div>
